--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3 id="escolha">Qual seu Pet?</h3>
         <ul class="animal">
             <img class="animal1" src="gato.jpg" alt="Gato">
-            <img class="animal1" src="Cachorro.jpg" alt="Cachorro">
+            <img class="animal1" src="cachorro.jpg" alt="Cachorro">
             <img class="animal1" src="passaro1.jpg" alt="Passarinho">
         </ul>
     </nav>
